--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "author": "Kevin",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "10.1.8"
+    "prompt-sync": "^4.2.0"
   },
   "devDependencies": {
     "jsdoc": "^4.0.3",
